--- a/html/C/authsvc/authenticator/ci/error.html
+++ b/html/C/authsvc/authenticator/ci/error.html
@@ -12,9 +12,9 @@
       document.getElementById("cancelForm").submit();
     }
     function populateStrings() {
-        document.title = inMsg.errorLabel;
-        document.getElementsByClassName("pageTitle")[0].textContent = inMsg.errorLabel;
-        document.getElementById("cancel_button").value = inMsg.back;
+        document.title = ciMsg.errorLabel;
+        document.getElementsByClassName("pageTitle")[0].textContent = ciMsg.errorLabel;
+        document.getElementById("cancel_button").value = ciMsg.back;
     }
   </script>
   </head>
