--- a/html/C/authsvc/authenticator/ci/username.html
+++ b/html/C/authsvc/authenticator/ci/username.html
@@ -9,10 +9,10 @@
     <script src="/sps/mga/user/mgmt/html/common.js" type="text/javascript"></script>
     <script type="text/javascript">
     function populateStrings() {
-        document.title = inMsg.login;
-        document.getElementById("header_text").textContent = inMsg.welcome;
-        document.getElementById("instructions").textContent = inMsg.usernameInstructions;
-        document.getElementById("submit_button").value = inMsg.submit;
+        document.title = ciMsg.login;
+        document.getElementById("header_text").textContent = ciMsg.welcome;
+        document.getElementById("instructions").textContent = ciMsg.usernameInstructions;
+        document.getElementById("submit_button").value = ciMsg.submit;
     }
 
     function enableButton(text) {
@@ -27,7 +27,6 @@
         populateStrings();
     }
     </script>
- <head>
   </head>
   <body onload="startup()">
     <div class="content">
