--- a/html/C/authsvc/authenticator/ci/jit_enroll.html
+++ b/html/C/authsvc/authenticator/ci/jit_enroll.html
@@ -14,9 +14,10 @@
     var phoneCodes = {}; phoneCodes[ciMsg.AD] = "+376"; phoneCodes[ciMsg.AT] = "+43"; phoneCodes[ciMsg.AU] = "+61"; phoneCodes[ciMsg.BE] = "+32"; phoneCodes[ciMsg.BM] = "+809"; phoneCodes[ciMsg.CA] = "+1"; phoneCodes[ciMsg.CY] = "+357"; phoneCodes[ciMsg.CZ] = "+420"; phoneCodes[ciMsg.DK] = "+45"; phoneCodes[ciMsg.EE] = "+372"; phoneCodes[ciMsg.FO] = "+298"; phoneCodes[ciMsg.FI] = "+358"; phoneCodes[ciMsg.FR] = "+33"; phoneCodes[ciMsg.DE] = "+49"; phoneCodes[ciMsg.GR] = "+30"; phoneCodes[ciMsg.GL] = "+299"; phoneCodes[ciMsg.HK] = "+852"; phoneCodes[ciMsg.IS] = "+354"; phoneCodes[ciMsg.IN] = "+91"; phoneCodes[ciMsg.IE] = "+353"; phoneCodes[ciMsg.IL] = "+972"; phoneCodes[ciMsg.IT] = "+39"; phoneCodes[ciMsg.JP] = "+81"; phoneCodes[ciMsg.LI] = "+423"; phoneCodes[ciMsg.LU] = "+352"; phoneCodes[ciMsg.MT] = "+356"; phoneCodes[ciMsg.MC] = "+33"; phoneCodes[ciMsg.NL] = "+31"; phoneCodes[ciMsg.NZ] = "+64"; phoneCodes[ciMsg.NO] = "+47"; phoneCodes[ciMsg.PH] = "+63"; phoneCodes[ciMsg.PL] = "+48"; phoneCodes[ciMsg.PT] = "+351"; phoneCodes[ciMsg.SM] = "+378"; phoneCodes[ciMsg.SA] = "+966"; phoneCodes[ciMsg.SG] = "+65"; phoneCodes[ciMsg.SK] = "+421"; phoneCodes[ciMsg.SI] = "+386"; phoneCodes[ciMsg.ES] = "+34"; phoneCodes[ciMsg.SE] = "+46"; phoneCodes[ciMsg.CH] = "+41"; phoneCodes[ciMsg.TH] = "+66"; phoneCodes[ciMsg.AE] = "+971"; phoneCodes[ciMsg.GB] = "+44"; phoneCodes[ciMsg.US] = "+1";
 
     function unhideMethods() {
-        var enabledMethods = @ENABLED_METHODS@;
+        var enabledMethods = '@ENABLED_METHODS@';
 
         if(enabledMethods && enabledMethods.length > 0) {
+            enabledMethods = JSON.parse(enabledMethods.replace(/&quot;/g,'"'));
 
             var includeTOTP = enabledMethods.indexOf("TOTP") != -1;
             var includeSMS = enabledMethods.indexOf("SMSOTP") != -1;
